# Vaulty

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
apps/api/: alembic.ini  celerybeat-schedule  pyproject.toml
apps/api/app/: health.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: assistant.py  auth.py  billing.py  documents.py  emergency.py  family.py  meta.py  reminders.py  search.py  vault.py
apps/api/app/core/: audit.py  config.py  errors.py  feature_flags.py  logging.py  quotas.py  rate_limit.py  security.py  storage.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  audit.py  billing.py  document.py  family.py  feature_flag.py  reminder.py  session.py  user.py  vault.py
apps/api/app/services/: assistant.py  billing.py  email.py  extraction.py  processing.py  reminders.py  search.py
apps/api/app/worker/: celery_app.py
apps/api/app/worker/tasks/: extraction.py  heartbeat.py  reminders.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_foundation.py  0002_auth_tenancy.py  0003_documents.py  0004_extraction.py  0005_search.py  0006_reminders.py  0007_bill_status.py  0008_family_emergency.py  0009_assistant_flag.py  0010_billing.py
apps/api/tests/: conftest.py  test_assistant.py  test_auth.py  test_billing.py  test_document_edit.py  test_documents.py  test_emergency.py  test_errors.py  test_extraction.py  test_family.py  test_feature_flags.py  test_health.py  test_meta.py  test_rate_limit.py  test_reminders.py  test_search.py
(+95 files in other folders)
